<resources>
    <string name="addresses_copied">Copied to clipboard.</string>
    <string name="app_name">@string/app_name_consumer</string>
    <string name="barcode_scan_message">"Place a Bitcoin QR code inside the
viewfinder to scan it."</string>
    <string name="copy_address">Copy Address</string>
    <string name="my_address">My Address</string>
    <string name="scan_tabs_left_button">Scan code</string>
    <string name="scan_tabs_right_button">My address</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="a_card_setup_error_occurred">A card setup error occurred</string>
    <string name="a_payment_processing_error_occurred">A payment processing error occurred</string>
    <string name="a_verification_error_occurred">A verification error occurred</string>
    <string name="abandon_add_bank_message">Are you sure you want to cancel adding a bank account?</string>
    <string name="abandon_login_message">Are you sure you want to abandon sign-in process?</string>
    <string name="abandon_signup_message">Are you sure you want to abandon the sign-up process?</string>
    <string name="about_title">About %1$s</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="accept_terms_description">Loading Terms of Service...</string>
    <string name="account_android_pin">Android app PIN</string>
    <string name="account_android_pin_all">Require PIN to open the app</string>
    <string name="account_android_pin_edit">Require PIN only when transferring money</string>
    <string name="account_android_pin_none">PIN not enabled</string>
    <string name="account_bitcoin_units">Bitcoin units</string>
    <string name="account_change_name">New name</string>
    <string name="account_created">Account created.</string>
    <string name="account_deleted">Account deleted</string>
    <string name="account_details_missing">Missing account information</string>
    <string name="account_email">Email</string>
    <string name="account_header">Account</string>
    <string name="account_limits">Your buy / sell limits</string>
    <string name="account_limits_text">Buy %1$s %2$s per day, sell %3$s %4$s per day</string>
    <string name="account_list_error">Could not load list.</string>
    <string name="account_locked">Account locked</string>
    <string name="account_locked_upper_case">YOUR ACCOUNT IS LOCKED</string>
    <string name="account_name">Name</string>
    <string name="account_native_currency">Native currency</string>
    <string name="account_number">Account number</string>
    <string name="account_receive_address_generate">Generate new address</string>
    <string name="account_save_error">Could not save account settings.</string>
    <string name="account_save_progress">Saving…</string>
    <string name="account_save_success">Saved.</string>
    <string name="account_setup">Account setup</string>
    <string name="account_successfully_renamed">Account successfully renamed</string>
    <string name="account_time_zone">Time zone</string>
    <string name="account_type_business_checking">Business Checking</string>
    <string name="account_verification_in_progress">Account verification in progress</string>
    <string name="amount_number_1">Amount #1</string>
    <string name="amount_number_2">Amount #2</string>
    <string name="bank_name">Bank Name</string>
    <string name="btn_continue">Continue</string>
    <string name="buy_bitcoin_instantly">Buy bitcoin now</string>
    <string name="cdv_description">Manually enter codes from two small deposits sent to your nominated account. Takes between 2-5 days.</string>
    <string name="cdv_verification_details">We sent two small deposits to your account. Please go to Payment Methods option in Settings to manually enter these deposits and complete account verification. Deposits will arrive in 2-5 business days.</string>
    <string name="choose_the_type_of_account">Choose the type of account</string>
    <string name="choose_verification_method">Verify your account</string>
    <string name="create_account">Create Account</string>
    <string name="deposit_verification">Deposit Verification</string>
    <string name="enter_the_full_name_of_your_account">Enter the name on your account</string>
    <string name="enter_verification_amount">Enter verification amounts</string>
    <string name="enter_your_account_details">Enter your account details</string>
    <string name="full_name">Full name</string>
    <string name="iav_verification_in_progress">We are verifying your account. This might take a couple of minutes.</string>
    <string name="iban">IBAN</string>
    <string name="label_account_address">Account Address</string>
    <string name="label_account_name">Account Name</string>
    <string name="label_bank_country_name">Bank Country</string>
    <string name="label_bank_name">Bank Name</string>
    <string name="label_iban">IBAN</string>
    <string name="label_reference_id">Reference ID</string>
    <string name="label_swift">SWIFT</string>
    <string name="new_wallet_account">Create a new wallet</string>
    <string name="no_thanks">No thanks</string>
    <string name="purchase_five_dollars">Purchase $5 of bitcoin</string>
    <string name="routing_number">Routing number</string>
    <string name="sepa_deposit_subtitle">Deposit money to your EUR Account using the following details. You can use this amount to buy digital currencies like bitcoin and ethereum</string>
    <string name="sepa_deposit_title">SEPA Deposit Details</string>
    <string name="sign_up_different_email">Sign up with a different email</string>
    <string name="signup_email_verification_instructions">We sent a verification email to %1$s. Click the link in the email to verify your email.</string>
    <string name="signup_no_email_instructions">"If the email didn't arrive, please contact support@coinbase.com"</string>
    <string name="skip">SKIP</string>
    <string name="swift">SWIFT</string>
    <string name="tfa_token">2FA Token</string>
    <string name="transactions_refresh_error">Could not sync transactions.</string>
    <string name="verify_caps">VERIFY</string>
    <string name="verify_email_address">Verify your email address</string>
    <string name="verify_phone_description_large">Increase account security by verifying your phone number.</string>
    <string name="verify_your_phone">Verify your phone</string>
    <string name="wallet_name_hint">BTC Wallet</string>
    <string name="we_will_use_the_account_just_setup">"We'll use the account you just set up"</string>
    <string name="where_do_i_find_these">Where do I find these?</string>
    <string name="your_phone_number">your phone number</string>
    <string name="label_bank_address">Bank Address</string>
    <string name="purchase_custom_amount">Purchase a custom amount</string>
</resources>