<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/white_box" android:paddingTop="@dimen/margin_default" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="@dimen/intro_screen_icon_size" android:layout_height="@dimen/intro_screen_icon_size" android:layout_marginBottom="@dimen/margin_default" android:src="@drawable/email_verification" />
        <TextView android:textSize="@dimen/text_size_large" android:textColor="@color/text_dark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/verify_email_address" />
        <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/black" android:gravity="center" android:id="@id/signup_confirm_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_default" android:text="@string/signup_email_verification_instructions" />
        <View android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_default" android:text="@string/signup_no_email_instructions" />
    </LinearLayout>
    <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/signup_incorrect_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_default" android:text="@string/sign_up_different_email" />
</LinearLayout>